[gd_scene load_steps=3 format=3 uid="uid://db8ec5njykh04"]

[ext_resource type="Script" path="res://scenes/components/mapping_request_detail.gd" id="1_kn5g2"]

[sub_resource type="LabelSettings" id="LabelSettings_5joaf"]
font_size = 20

[node name="MappingRequestDetail" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kn5g2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Request"
label_settings = SubResource("LabelSettings_5joaf")

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Name"

[node name="NameEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Priority"

[node name="PriorityEdit" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 9999.0
value = 1.0
rounded = true

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Path"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="MethodOption" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 7
popup/item_0/text = "ANY"
popup/item_1/text = "GET"
popup/item_1/id = 1
popup/item_2/text = "POST"
popup/item_2/id = 2
popup/item_3/text = "PUT"
popup/item_3/id = 3
popup/item_4/text = "PATCH"
popup/item_4/id = 4
popup/item_5/text = "DELETE"
popup/item_5/id = 5
popup/item_6/text = "OPTIONS"
popup/item_6/id = 6

[node name="PathMatchTypeOption" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
selected = 3
item_count = 4
popup/item_0/text = "Match URL"
popup/item_1/text = "Match URL Path"
popup/item_1/id = 1
popup/item_2/text = "Match URL Pattern"
popup/item_2/id = 2
popup/item_3/text = "Match URL Path Pattern"
popup/item_3/id = 3

[node name="PathEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="text_changed" from="MarginContainer/VBoxContainer/HBoxContainer/NameEdit" to="." method="_on_name_edit_text_changed"]
